--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
-<html>SOLEDAD</title>
+<html lang='en'>
+<head>
+	<meta charset="UTF-8">
+	<title>SOLEDAD</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
+
+
 <body>
 <header><h1>Soledad</h1>
 </header>
