--- a/index.html
+++ b/index.html
@@ -248,6 +248,37 @@
         </div>
     </div>
 
+
+
+		<ul>
+			<li><img class="img_insta" href="https://www.instagram.com/p/BVHK0hgD6FI/" src="img/styled2.jpg"></li>
+			<li><img class="img_insta" href="https://www.instagram.com/p/BVHK0hgD6FI/" src="img/photography.jpg"></li>
+			<li><img class="img_insta" href="https://www.instagram.com/p/BVHK0hgD6FI/" src="img/girl-tattoo.jpg"></li>
+			<li><img class="img_insta" href="https://www.instagram.com/p/BVHK0hgD6FI/" src="img/fashion-girl.jpg"></li>
+			<li><img class="img_insta" href="https://www.instagram.com/p/BVHK0hgD6FI/" src="img/styled2.jpg"></li>
+			<li><img class="img_insta" href="https://www.instagram.com/p/BVHK0hgD6FI/" src="img/photography.jpg"></li>
+			<li><img class="img_insta" href="https://www.instagram.com/p/BVHK0hgD6FI/" src="img/girl-tattoo.jpg"></li>
+			<li><img class="img_insta" href="https://www.instagram.com/p/BVHK0hgD6FI/" src="img/fashion-girl.jpg"></li>
+	</ul>
+
+<footer>
+		<div class="container">
+			<div class="social_bar"
+				<div class="row">
+					<div class="col-lg-12">
+						<ul>
+							<li><a href="https://www.facebook.com/PenciDesign"></li>
+							<li><a>FEATURES</a></li>
+							<li><a>STYLE</a></li>
+							<li><a>TRAVEL</a></li>
+							<li><a>PORTFOLIO</a></li>
+							<li><a>SHOP</a></li>
+							<li><a>HEADERS</a></li>
+							<li><a>CONTACT ME</a></li>
+							<li><a>PURCHASE</a></li>
+						</ul>
+</footer>
+
 </body>
 
 </html>
