--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<ul>
-					<li><a>HOME</a> </li>
-					<li><a>FEATURES</a></li>
-					<li><a>STYLE</a></li>
-					<li><a>TRAVEL</a></li>
-					<li><a>PORTFOLIO</a></li>
-					<li><a>SHOP</a></li>
-					<li><a>HEADERS</a></li>
-					<li><a>CONTACT ME</a></li>
-					<li><a>PURCHASE</a></li>
+					<li><a href="index.html">HOME</a> </li>
+					<li><a href="index.html">FEATURES</a></li>
+					<li><a href="index.html">STYLE</a></li>
+					<li><a href="index.html">TRAVEL</a></li>
+					<li><a href="index.html">PORTFOLIO</a></li>
+					<li><a href="index.html">SHOP</a></li>
+					<li><a href="index.html">HEADERS</a></li>
+					<li><a href="index.html">CONTACT ME</a></li>
+					<li><a href="index.html">PURCHASE</a></li>
 				</ul>
 </nav>
 
@@ -249,7 +249,7 @@
     </div>
 
 
-
+		<div class="container">
 		<ul>
 			<li><img class="img_insta" href="https://www.instagram.com/p/BVHK0hgD6FI/" src="img/styled2.jpg"></li>
 			<li><img class="img_insta" href="https://www.instagram.com/p/BVHK0hgD6FI/" src="img/photography.jpg"></li>
@@ -261,24 +261,34 @@
 			<li><img class="img_insta" href="https://www.instagram.com/p/BVHK0hgD6FI/" src="img/fashion-girl.jpg"></li>
 	</ul>
 
+
 <footer>
-		<div class="container">
-			<div class="social_bar"
+
 				<div class="row">
 					<div class="col-lg-12">
-						<ul>
-							<li><a href="https://www.facebook.com/PenciDesign"></li>
-							<li><a>FEATURES</a></li>
-							<li><a>STYLE</a></li>
-							<li><a>TRAVEL</a></li>
-							<li><a>PORTFOLIO</a></li>
-							<li><a>SHOP</a></li>
-							<li><a>HEADERS</a></li>
-							<li><a>CONTACT ME</a></li>
-							<li><a>PURCHASE</a></li>
-						</ul>
-</footer>
+						<div class="icon">
+							<ul>
+								<li><a href="#"><i class="fa fa-facebook fa-1x"></i><span> FACEBOOK</span></a></li>
+								<li><a href="#"><i class="fa fa-twitter fa-1x"></i><span> TWITTER</span></a></li>
+								<li><a href="#"><i class="fa fa-instagram fa-1x"></i><span> INSTAGRAM</span></a></li>
+								<li><a href="#"><i class="fa fa-pinterest fa-1x"></i><span> PINTEREST</span></a></li>
+								<li><a href="#"><i class="fa fa-flickr fa-1x"></i><span> FLICK</span></a></li>
+								<li><a href="#"><i class="fa fa-tumblr fa-1x"></i><span> TUMBLR</span></a></li>
+								<li><a href="#"><i class="fa fa-youtube fa-1x"></i><span> YOUTUBE</span></a></li>
+							</ul>
+						</div>
 
-</body>
+	<div class="row">	
 
+					<div class="col-lg-12">
+						<div class="last">
+							<p><a href="index.html"><img src="img/logo-f.png"></a></p>
+							<p>@2016 - PenciDesign. All Right Reserved. Designed and Developed by PenciDesign</p>
+						</div>	
+					</div>
+				</div>	
+			</div>
+			
+		</footer>
+	</body>
 </html>
