Add Modifs Header + footer

--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
+<header>
+
 <nav class="navbar">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
 				<ul>
-					<li><a href="index.html">HOME</a> </li>
-					<li><a href="index.html">FEATURES</a></li>
-					<li><a href="index.html">STYLE</a></li>
-					<li><a href="index.html">TRAVEL</a></li>
-					<li><a href="index.html">PORTFOLIO</a></li>
-					<li><a href="index.html">SHOP</a></li>
-					<li><a href="index.html">HEADERS</a></li>
-					<li><a href="index.html">CONTACT ME</a></li>
-					<li><a href="index.html">PURCHASE</a></li>
+					<li href="index.html">HOME</li>
+					<li href="index.html">FEATURES</li>
+					<li href="index.html">STYLE</a></li>
+					<li href="index.html">TRAVEL</a></li>
+					<li href="index.html">PORTFOLIO</a></li>
+					<li href="index.html">SHOP</a></li>
+					<li href="index.html">HEADERS</a></li>
+					<li href="index.html">CONTACT ME</a></li>
+					<li href="index.html">PURCHASE</a></li>
 				</ul>
 </nav>
 
-<header>
         <div class="row">
             <div class="col-lg-12">
                 <h1><img src="img/logo-f.png"></h1>
@@ -36,7 +37,7 @@
 </header>
 
 <div class="col-lg-12" class="article_avant">
-    <div class="jumbotron">
+    <div class="jumbetron">
         <img class="presentation_img" src="img/bag.jpg">
             <div class="billet">
     			 <div class="category">TRENDY</div>
@@ -44,7 +45,7 @@
     					<div class="author_date"> by <a>Marina</a> | September 3,2015
                     </div>
     			 </div>
-    		  </div>
+            </div>
          </div>
 
 
